crates/cayenne/tests/snapshots/partition_pruning_test__bucket_partition_combined_filters.snap
---
source: crates/cayenne/tests/partition_pruning_test.rs
expression: explain_plan
---
CayenneAccelerationExec
  SortExec: expr=[id@0 ASC NULLS LAST], preserve_partitioning=[false]
    DataSourceExec: file_groups={1 group: [[<TEMP_PATH>/<FILE>.vortex]]}, projection=[id, name, value], file_type=vortex, predicate: id@0 > 3 AND value@2 < 700
