crates/cayenne/tests/snapshots/partition_pruning_test__partition_and_data_filter.snap
---
source: crates/cayenne/tests/partition_pruning_test.rs
expression: explain_plan
---
SortExec: expr=[id@0 ASC NULLS LAST], preserve_partitioning=[false]
  DataSourceExec: file_groups={1 group: [[<TEMP_PATH>/<FILE>.vortex]]}, projection=[id, region, value], file_type=vortex, predicate: region@1 = us-west-1 AND value@2 > 300
