crates/cayenne/tests/snapshots/partition_pruning_test__partition_filter_us_east_1.snap
---
source: crates/cayenne/tests/partition_pruning_test.rs
expression: explain_plan
---
CayenneAccelerationExec: snapshots_scanned=1, files_scanned=1
  SortExec: expr=[id@0 ASC NULLS LAST], preserve_partitioning=[false]
    DataSourceExec: file_groups={1 group: [[<TEMP_PATH>/<FILE>.vortex]]}, projection=[id, region, value], file_type=vortex, predicate: region@1 = us-east-1
